# FactCheckRetrieval

./: .gitattributes  README.md  pyproject.toml
multilingual-fact-retrieval/checkpoint-40/: README.md  adapter_config.json  adapter_model.safetensors  config_sentence_transformers.json  rng_state_0.pth  rng_state_1.pth  rng_state_2.pth  scheduler.pt  special_tokens_map.json  tokenizer_config.json  trainer_state.json
multilingual-fact-retrieval/checkpoint-40/1_Pooling/: config.json
src/: compute_embeddings.py  create_submission.py  dataset.py  inference.py  train.py
src/fact_retrieval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/modules/: prompt_embedding.py  query_only_prompt_st.py
src/utils/: data_utils.py  eval_utils.py  model_utils.py  query_only_prompt_collator.py  training_utils.py
